# issueradar

./: .env.example  README.md  pyproject.toml
app/: auth.py  cache.py  config.py  github.py  llm.py  main.py  models.py  service.py  utils.py
app/static/: app.js  index.html  styles.css
artifacts/e2e/: e2e-summary.json
github_issuereader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: e2e_agent_browser.sh
tests/: test_api.py  test_auth.py  test_github_client.py  test_llm_cache.py
